Fixed 'Add/Delete User' functionalities

--- a/Music-Manager/admin.ui
+++ b/Music-Manager/admin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>555</width>
-    <height>398</height>
+    <width>850</width>
+    <height>647</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,10 @@
   <widget class="QLabel" name="label_admin">
    <property name="geometry">
     <rect>
-     <x>220</x>
+     <x>240</x>
      <y>10</y>
-     <width>81</width>
-     <height>16</height>
+     <width>261</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="text">
@@ -29,8 +29,8 @@
   <widget class="QLabel" name="label_username">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>60</y>
+     <x>40</x>
+     <y>140</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -42,8 +42,8 @@
   <widget class="QLabel" name="label_password">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>100</y>
+     <x>40</x>
+     <y>180</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -55,8 +55,8 @@
   <widget class="QLabel" name="label_email">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>140</y>
+     <x>50</x>
+     <y>220</y>
      <width>58</width>
      <height>16</height>
     </rect>
@@ -68,8 +68,8 @@
   <widget class="QLineEdit" name="lineEdit_username">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>60</y>
+     <x>120</x>
+     <y>140</y>
      <width>113</width>
      <height>21</height>
     </rect>
@@ -78,8 +78,8 @@
   <widget class="QLineEdit" name="lineEdit_password">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>100</y>
+     <x>120</x>
+     <y>180</y>
      <width>113</width>
      <height>21</height>
     </rect>
@@ -88,8 +88,8 @@
   <widget class="QLineEdit" name="lineEdit_email">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>140</y>
+     <x>120</x>
+     <y>220</y>
      <width>113</width>
      <height>21</height>
     </rect>
@@ -98,8 +98,8 @@
   <widget class="QPushButton" name="pushButton_confirm">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>220</y>
+     <x>90</x>
+     <y>300</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -111,8 +111,8 @@
   <widget class="QRadioButton" name="radioButton_addUser">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>180</y>
+     <x>40</x>
+     <y>260</y>
      <width>99</width>
      <height>20</height>
     </rect>
@@ -124,8 +124,8 @@
   <widget class="QRadioButton" name="radioButton_deleteUser">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>180</y>
+     <x>150</x>
+     <y>260</y>
      <width>99</width>
      <height>20</height>
     </rect>
@@ -137,10 +137,10 @@
   <widget class="QPushButton" name="pushButton_listUsers">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>60</y>
-     <width>100</width>
-     <height>32</height>
+     <x>510</x>
+     <y>30</y>
+     <width>211</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="text">
@@ -150,8 +150,8 @@
   <widget class="QLabel" name="label_createDelete">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>30</y>
+     <x>80</x>
+     <y>110</y>
      <width>121</width>
      <height>16</height>
     </rect>
@@ -160,13 +160,13 @@
     <string>Create/Delete User</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="textEdit_userList">
+  <widget class="QListWidget" name="listWidget_users">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>350</x>
      <y>100</y>
-     <width>104</width>
-     <height>71</height>
+     <width>491</width>
+     <height>401</height>
     </rect>
    </property>
   </widget>
