--- a/Music-Manager/admin.ui
+++ b/Music-Manager/admin.ui
@@ -170,6 +170,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="CreateSong">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>370</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Create Song</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
