--- a/Music-Manager/admin.ui
+++ b/Music-Manager/admin.ui
@@ -183,6 +183,19 @@
     <string>Create Song</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_back">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>30</y>
+     <width>71</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
