--- a/Music-Manager/playlistmanagement.ui
+++ b/Music-Manager/playlistmanagement.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>497</width>
+    <height>374</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="AddPlaylist">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>40</y>
+     <x>60</x>
+     <y>70</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QPushButton" name="DeletePlaylist">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>100</y>
+     <x>60</x>
+     <y>130</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -42,8 +42,8 @@
   <widget class="QPushButton" name="AddSong">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>170</y>
+     <x>60</x>
+     <y>200</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -55,8 +55,8 @@
   <widget class="QPushButton" name="DeleteSong">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>240</y>
+     <x>60</x>
+     <y>270</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -68,8 +68,8 @@
   <widget class="QTextEdit" name="playlistDisplay">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>20</y>
+     <x>210</x>
+     <y>50</y>
      <width>181</width>
      <height>121</height>
     </rect>
@@ -78,11 +78,24 @@
   <widget class="QTextEdit" name="songDisplay">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>170</y>
+     <x>210</x>
+     <y>200</y>
      <width>181</width>
      <height>121</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_back">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>71</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Back</string>
    </property>
   </widget>
  </widget>
