--- a/Music-Manager/songpage.ui
+++ b/Music-Manager/songpage.ui
@@ -118,6 +118,19 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_back">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>71</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
