Fixed 'file could not be opened' bug when launching User Dashboard

--- a/Music-Manager/mainwindow.ui
+++ b/Music-Manager/mainwindow.ui
@@ -57,8 +57,8 @@
     <widget class="QLabel" name="Label_username_2">
      <property name="geometry">
       <rect>
-       <x>40</x>
-       <y>90</y>
+       <x>50</x>
+       <y>110</y>
        <width>41</width>
        <height>21</height>
       </rect>
@@ -76,8 +76,8 @@
     <widget class="QLabel" name="Label_password">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>60</y>
+       <x>30</x>
+       <y>80</y>
        <width>81</width>
        <height>21</height>
       </rect>
@@ -95,8 +95,8 @@
     <widget class="QLabel" name="Label_username">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>30</y>
+       <x>30</x>
+       <y>50</y>
        <width>81</width>
        <height>21</height>
       </rect>
@@ -114,8 +114,8 @@
     <widget class="QLineEdit" name="LineEdit_password">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>60</y>
+       <x>120</x>
+       <y>80</y>
        <width>113</width>
        <height>21</height>
       </rect>
@@ -133,8 +133,8 @@
     <widget class="QLineEdit" name="LineEdit_username">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>30</y>
+       <x>120</x>
+       <y>50</y>
        <width>113</width>
        <height>21</height>
       </rect>
@@ -146,11 +146,11 @@
       </font>
      </property>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>90</y>
+       <x>110</x>
+       <y>110</y>
        <width>141</width>
        <height>22</height>
       </rect>
@@ -190,7 +190,7 @@
      <rect>
       <x>140</x>
       <y>10</y>
-      <width>151</width>
+      <width>171</width>
       <height>51</height>
      </rect>
     </property>
@@ -198,6 +198,7 @@
      <font>
       <family>Arial</family>
       <pointsize>24</pointsize>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
