--- a/Music-Manager/user.ui
+++ b/Music-Manager/user.ui
@@ -7,102 +7,172 @@
     <x>0</x>
     <y>0</y>
     <width>618</width>
-    <height>437</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>User Dashboard</string>
   </property>
-  <widget class="QLabel" name="label_welcome">
+  <widget class="QWidget" name="welcomeSection">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>60</y>
-     <width>58</width>
-     <height>16</height>
+     <x>90</x>
+     <y>20</y>
+     <width>441</width>
+     <height>80</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Welcome </string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_summary">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>90</y>
-     <width>121</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Summary Statistics: </string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="createPlaylist">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>170</y>
-     <width>100</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Create Playlist</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="searchSongs">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>170</y>
-     <width>100</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Search Songs</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="viewPlaylist">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>170</y>
-     <width>100</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>View Playlists</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_lastPlayedSong">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>130</y>
-     <width>141</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Last Played Song: </string>
-   </property>
+   <layout class="QVBoxLayout" name="verticalLayoutWelcome">
+    <item>
+     <widget class="QLabel" name="label_welcome">
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Welcome, (Username)!</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_lastPlayedSong">
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Last Played Song:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QPushButton" name="pushButton_back">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>71</width>
-     <height>32</height>
+     <width>80</width>
+     <height>30</height>
     </rect>
    </property>
    <property name="text">
     <string>Back</string>
    </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_summary">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>110</y>
+     <width>251</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Summary Statistics</string>
+   </property>
+   <widget class="QLabel" name="label_totalPlaylists">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>230</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Total Playlists: N/A</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_lastPlaylistAccessed">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>55</y>
+      <width>230</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Last Playlist Accessed: N/A</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>220</y>
+     <width>371</width>
+     <height>241</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout_buttons">
+    <item row="0" column="0">
+     <widget class="QPushButton" name="createPlaylist">
+      <property name="minimumSize">
+       <size>
+        <width>120</width>
+        <height>40</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Create Playlist</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QPushButton" name="searchSongs">
+      <property name="minimumSize">
+       <size>
+        <width>120</width>
+        <height>40</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Search Songs</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="viewPlaylists">
+      <property name="minimumSize">
+       <size>
+        <width>120</width>
+        <height>40</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>View Playlists</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QPushButton" name="userReports">
+      <property name="minimumSize">
+       <size>
+        <width>120</width>
+        <height>40</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>User Reports</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
