--- a/Music-Manager/admin.ui
+++ b/Music-Manager/admin.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>20</y>
+     <y>40</y>
      <width>231</width>
      <height>61</height>
     </rect>
@@ -25,7 +25,7 @@
    <property name="font">
     <font>
      <family>Arial</family>
-     <pointsize>18</pointsize>
+     <pointsize>24</pointsize>
      <bold>true</bold>
     </font>
    </property>
@@ -39,7 +39,7 @@
   <widget class="QPushButton" name="CreateSong">
    <property name="geometry">
     <rect>
-     <x>310</x>
+     <x>300</x>
      <y>480</y>
      <width>111</width>
      <height>41</height>
@@ -48,7 +48,7 @@
    <property name="font">
     <font>
      <family>Arial</family>
-     <pointsize>16</pointsize>
+     <pointsize>18</pointsize>
      <bold>false</bold>
     </font>
    </property>
@@ -59,8 +59,8 @@
   <widget class="QPushButton" name="pushButton_back">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>80</y>
+     <x>30</x>
+     <y>30</y>
      <width>71</width>
      <height>32</height>
     </rect>
@@ -80,9 +80,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>140</y>
+     <y>100</y>
      <width>311</width>
-     <height>291</height>
+     <height>331</height>
     </rect>
    </property>
    <property name="font">
@@ -97,16 +97,16 @@
    <widget class="QLabel" name="label_username">
     <property name="geometry">
      <rect>
-      <x>32</x>
+      <x>20</x>
       <y>72</y>
-      <width>79</width>
-      <height>18</height>
+      <width>91</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Arial</family>
-      <pointsize>16</pointsize>
+      <pointsize>18</pointsize>
       <bold>false</bold>
      </font>
     </property>
@@ -117,16 +117,16 @@
    <widget class="QLabel" name="label_password">
     <property name="geometry">
      <rect>
-      <x>32</x>
+      <x>22</x>
       <y>105</y>
-      <width>75</width>
-      <height>18</height>
+      <width>91</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Arial</family>
-      <pointsize>16</pointsize>
+      <pointsize>18</pointsize>
       <bold>false</bold>
      </font>
     </property>
@@ -139,14 +139,14 @@
      <rect>
       <x>50</x>
       <y>138</y>
-      <width>45</width>
-      <height>18</height>
+      <width>51</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Arial</family>
-      <pointsize>16</pointsize>
+      <pointsize>18</pointsize>
       <bold>false</bold>
      </font>
     </property>
@@ -157,10 +157,10 @@
    <widget class="QPushButton" name="pushButton_confirm">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>250</y>
-      <width>100</width>
-      <height>32</height>
+      <x>90</x>
+      <y>290</y>
+      <width>121</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -174,13 +174,13 @@
      <string>Confirm</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>200</y>
-      <width>213</width>
-      <height>22</height>
+      <y>210</y>
+      <width>231</width>
+      <height>25</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -192,7 +192,7 @@
        <property name="font">
         <font>
          <family>Arial</family>
-         <pointsize>16</pointsize>
+         <pointsize>18</pointsize>
          <bold>false</bold>
         </font>
        </property>
@@ -206,7 +206,7 @@
        <property name="font">
         <font>
          <family>Arial</family>
-         <pointsize>16</pointsize>
+         <pointsize>18</pointsize>
          <bold>false</bold>
         </font>
        </property>
@@ -217,7 +217,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -266,10 +266,10 @@
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>360</x>
-     <y>140</y>
-     <width>321</width>
-     <height>291</height>
+     <x>350</x>
+     <y>100</y>
+     <width>351</width>
+     <height>331</height>
     </rect>
    </property>
    <property name="font">
@@ -282,21 +282,11 @@
    <property name="title">
     <string>User Accounts</string>
    </property>
-   <widget class="QListWidget" name="listWidget_users">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>20</y>
-      <width>321</width>
-      <height>201</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_listUsers">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>230</y>
+      <x>120</x>
+      <y>290</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -305,6 +295,27 @@
      <string>List Users</string>
     </property>
    </widget>
+   <widget class="QListWidget" name="listWidget_users">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>351</width>
+      <height>271</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>2</width>
+     <height>2</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2"/>
   </widget>
  </widget>
  <resources/>
