--- a/Music-Manager/user.ui
+++ b/Music-Manager/user.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>618</width>
-    <height>500</height>
+    <width>623</width>
+    <height>357</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QWidget" name="welcomeSection">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>20</y>
-     <width>441</width>
+     <width>401</width>
      <height>80</height>
     </rect>
    </property>
@@ -28,7 +28,7 @@
       <property name="font">
        <font>
         <family>Arial</family>
-        <pointsize>16</pointsize>
+        <pointsize>24</pointsize>
         <bold>true</bold>
        </font>
       </property>
@@ -45,7 +45,7 @@
       <property name="font">
        <font>
         <family>Arial</family>
-        <pointsize>12</pointsize>
+        <pointsize>16</pointsize>
        </font>
       </property>
       <property name="text">
@@ -74,11 +74,17 @@
   <widget class="QGroupBox" name="groupBox_summary">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>110</y>
-     <width>251</width>
-     <height>91</height>
+     <x>20</x>
+     <y>130</y>
+     <width>271</width>
+     <height>201</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>16</pointsize>
+    </font>
    </property>
    <property name="title">
     <string>Summary Statistics</string>
@@ -109,31 +115,43 @@
      <string>Last Playlist Accessed: N/A</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="userReports">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>110</y>
+      <width>147</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>120</width>
+      <height>40</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>User Reports</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>220</y>
-     <width>371</width>
-     <height>241</height>
+     <x>300</x>
+     <y>130</y>
+     <width>311</width>
+     <height>221</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_buttons">
-    <item row="0" column="0">
-     <widget class="QPushButton" name="createPlaylist">
-      <property name="minimumSize">
-       <size>
-        <width>120</width>
-        <height>40</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>Create Playlist</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
+    <item row="2" column="1">
      <widget class="QPushButton" name="searchSongs">
       <property name="minimumSize">
        <size>
@@ -141,12 +159,18 @@
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>Search Songs</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
+    <item row="1" column="1">
      <widget class="QPushButton" name="viewPlaylists">
       <property name="minimumSize">
        <size>
@@ -154,21 +178,14 @@
         <height>40</height>
        </size>
       </property>
-      <property name="text">
-       <string>View Playlists</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="userReports">
-      <property name="minimumSize">
-       <size>
-        <width>120</width>
-        <height>40</height>
-       </size>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+       </font>
       </property>
       <property name="text">
-       <string>User Reports</string>
+       <string>View/Create Playlists</string>
       </property>
      </widget>
     </item>
