--- a/Music-Manager/mainwindow.ui
+++ b/Music-Manager/mainwindow.ui
@@ -57,10 +57,10 @@
     <widget class="QLabel" name="Label_password">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>80</y>
-       <width>81</width>
-       <height>21</height>
+       <width>101</width>
+       <height>20</height>
       </rect>
      </property>
      <property name="font">
@@ -76,9 +76,9 @@
     <widget class="QLabel" name="Label_username">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>50</y>
-       <width>81</width>
+       <width>101</width>
        <height>21</height>
       </rect>
      </property>
@@ -131,9 +131,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>120</x>
       <y>10</y>
-      <width>171</width>
+      <width>261</width>
       <height>51</height>
      </rect>
     </property>
@@ -151,6 +151,25 @@
      <set>Qt::AlignmentFlag::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QPushButton" name="switch2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Dark Mode</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -158,7 +177,7 @@
      <x>0</x>
      <y>0</y>
      <width>468</width>
-     <height>24</height>
+     <height>17</height>
     </rect>
    </property>
   </widget>
