--- a/Music-Manager/playlistcreator.ui
+++ b/Music-Manager/playlistcreator.ui
@@ -42,9 +42,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>110</x>
      <y>10</y>
-     <width>261</width>
+     <width>311</width>
      <height>51</height>
     </rect>
    </property>
@@ -85,13 +85,13 @@
     </property>
    </widget>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>80</y>
      <width>220</width>
-     <height>23</height>
+     <height>24</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
