'Create Playlist' functionality now working User selects song from the existing song library and gives the playlist a name When exiting the application, the user's file in 'data/playlists/' is updated The playlist name is preceeded by a # symbol

--- a/Music-Manager/playlistcreator.ui
+++ b/Music-Manager/playlistcreator.ui
@@ -83,6 +83,9 @@
       <height>171</height>
      </rect>
     </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::SizeAdjustPolicy::AdjustToContentsOnFirstShow</enum>
+    </property>
     <property name="editTriggers">
      <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
     </property>
