--- a/Music-Manager/admin.ui
+++ b/Music-Manager/admin.ui
@@ -16,9 +16,9 @@
   <widget class="QLabel" name="label_admin">
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>230</x>
      <y>40</y>
-     <width>271</width>
+     <width>281</width>
      <height>61</height>
     </rect>
    </property>
@@ -39,9 +39,9 @@
   <widget class="QPushButton" name="CreateSong">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>250</x>
      <y>480</y>
-     <width>111</width>
+     <width>161</width>
      <height>41</height>
     </rect>
    </property>
@@ -118,8 +118,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>240</y>
-      <width>291</width>
+      <y>250</y>
+      <width>301</width>
       <height>29</height>
      </rect>
     </property>
@@ -127,34 +127,6 @@
      <property name="spacing">
       <number>30</number>
      </property>
-     <item>
-      <widget class="QRadioButton" name="radioButton_addUser">
-       <property name="font">
-        <font>
-         <family>Arial</family>
-         <pointsize>18</pointsize>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>Add User</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QRadioButton" name="radioButton_deleteUser">
-       <property name="font">
-        <font>
-         <family>Arial</family>
-         <pointsize>18</pointsize>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>Delete User      </string>
-       </property>
-      </widget>
-     </item>
     </layout>
    </widget>
    <widget class="QWidget" name="layoutWidget">
@@ -299,6 +271,46 @@
       </layout>
      </item>
     </layout>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_addUser">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>250</y>
+      <width>131</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>18</pointsize>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Add User</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_deleteUser">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>250</y>
+      <width>161</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>18</pointsize>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Delete User      </string>
+    </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
